[project]
name = "blog-generator-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langchian>=0.2.5",
    "langsmith>=0.6.8",
    "python-docx>=1.2.0",
]
